# papr-server-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
metadata/databases/default/tables/: public_twabs.yaml  tables.yaml
migrations/2023-03-15-173829_create_twabs/: down.sql  up.sql
migrations/2023-03-16-195722_create_twabs/: up.sql
migrations/2023-03-16-202413_uuid_id/: down.sql  up.sql
migrations/2023-03-17-132427_create_twabs/: down.sql  up.sql
migrations/default/1679318065359_create_table_public_twabs/: down.sql  up.sql
src/: graphql.rs  lib.rs  models.rs  nft_info.rs  oracle.rs  redis.rs  reservoir.rs  schema.rs
src/api/routes/: info.rs  mod.rs  oracle.rs
src/database/: client.rs  connection.rs  mod.rs  models.rs  twabs.rs
src/papr_subgraph/: client.rs  mod.rs
src/papr_subgraph/graphql/: allowedCollateralForControllers.graphql  controller_by_id.graphql  paprSchema.graphql
src/papr_subgraph/queries/: allowed_collateral.rs  controller_by_id.rs  mod.rs
