[package]
name = "papr-server-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.3", features = ["json"] }
eyre = "0.6.8"
once_cell = "1.17"
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread", "macros"] }
reservoir-nft = "0.1.4"
diesel = { version = "2.0.3", features = ["postgres"] }
dotenvy = "0.15.6"
